--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <audio autoplay loop>
+  <source src="audio.mp3" type="audio/mpeg" />
+</audio>
     <div class="intro" id="introText">
       i hope you read this, even if it's too late.
     </div>
