--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <source src="audio.mp3" type="audio/mpeg" />
 </audio>
     <div class="intro" id="introText">
-      i hope you read this, even if it's too late.
+      this is something i want to tell you
     </div>
-    <button class="btn" onclick="showLetter()">Read it</button>
+    <button class="btn" onclick="showLetter();document.getElementById('bg-music').play();">Read it</button>
 
     <div class="letter" id="letterBox">
       <p id="typedText"></p>
@@ -21,5 +21,8 @@
     </div>
 
     <script src="script.js"></script>
+    <audio id="bg-music"loop>
+      <source src="audio.mp3" type="audio/mpeg">
+    </audio>
   </body>
 </html>
